
Thu Nov 11 21:08:12 GMT 1999
(gilbertt)

Changed ~/ to $HOME/ in the default E-ScreenShoot directory config, for
those people with strange obscure machines that just don't play ball :-P

Oh, and just for KainX, there follows TWO newlines. One for this entry, and
one to make up for the last omission. ;-)

-------------------------------------------------------------------------------

Thu Nov 11 20:04:39 EST 1999
(StriderZ)

changes to epplets/E-Exec.c 

Added some buttons to E-Exec for later use in controlling the history feature.

-------------------------------------------------------------------------------

Thu Nov 11 20:19:09 EST 1999
(StriderZ)

changes to epplets/E-Exec.c 

Added some code to do a command history. A change to the api is needed for it
to work, so I'm committing this first so I don't screw anything up during the
api modification. currently the relevant code is commented out.

-------------------------------------------------------------------------------

Thu Nov 11 22:59:14 EST 1999
(StriderZ)

changes to epplets/E-Exec.c api/epplet.c api/epplet.h

Ok. E-Exec now does command history of up to 15 items. Added
Epplet_change_textbox. Not thoroughly tested, but isn't that what users 
are for? *runs*

-------------------------------------------------------------------------------

Fri Nov 12 00:50:41 EST 1999
(StriderZ)

changes to api/eppet.c

Textboxes can scroll now. It's a little weird cuz the right "limit" moves 
around. I need to fix the way it figures out where to stop spitting out
chars since upper/lowercase chars are not all the same width. I'll look into
it unless someone has some insight on this.

-------------------------------------------------------------------------------

Fri Nov 12 16:50:11 GMT 1999
(gilbertt)

Changes to E-Clock.c E-Areas.c Emix.x E-Sys.c E-Mountbox.c E-Load.c
E-Memwatch.c

Using atexit(Epplet_cleanup) prevents all those "mulitple spawning on
startup problems" people get.
